# classicWinGui

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  app.c  cwg.c  cwg.h
src/backend/: CMakeLists.txt  backend.h  backend.md
src/backend/sdl3/: CMakeLists.txt  backend.c  sdl3_wrappers.c  sdl3_wrappers.h
src/display/: CMakeLists.txt  display.c  display.h
src/error/: error.h
user_scripts/: user_scripts.md
